CHANGES
=======

3.5.2 (unreleased)
------------------

- TBD

3.5.1 (2010-04-30)
------------------

- Removed use of 'zope.testing.doctestunit' in favor of stdlib's 'doctest.

3.5.0 (2010-01-01)
------------------

- Ported the lazy expression from Products.PageTemplates.

3.4.0 (2007-10-03)
------------------

- Updated package setup.

- Initial release outside the Zope 3 trunk.

3.2.0 (2006-01-05)
------------------

- Corresponds to the verison of the zope.tales package shipped as part of
  the Zope 3.2.0 release.

- Documentation / test fixes.

3.0.0 (2004-11-07)
------------------

- Corresponds to the verison of the zope.tales package shipped as part of
  the Zope X3.0.0 release.